# viberails

./: .gcloudignore  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs  release.md
.cargo/: config.toml
.github/workflows/: build.yml
git-hooks/: pre-commit
hooks/: install.sh  pre-push
installer/: install.ps1  install.sh  join.ps1
mock/: server.py
mock_server/: server.py
resources/: consts.json
resources/oauth/: error.html  success.html
signing/: .gitignore  README.md  client.py
signing/entitlements/: viberails-macos-x86.plist
signing/lc_py/: lc_py_utils.py
src/: common.rs  default.rs  lib.rs  logging.rs  main.rs  upgrade.rs
src/cloud/: lc_api.rs  mod.rs  query.rs
src/config/: loader.rs  loader_tests.rs  mod.rs
src/edr/: mod.rs
src/hooks/: hook.rs  install.rs  install_test.rs  list.rs  mod.rs
src/oauth/: auth.rs  login.rs  mod.rs  primer_rules.rs
src/providers/: claude.rs  claudecode.rs  clawdbot.rs  codex.rs  copilot.rs  cursor.rs  discovery.rs  gemini.rs  mod.rs  openclaw.rs  opencode.rs  registry.rs  selector.rs
src/tests/: menu_tests.rs
src/tui/: app.rs  mod.rs  prompts.rs  (+1 more)
tests/: mock_requests.py
viberails/: Cargo.toml  ok
viberails/.github/workflows/: build.yml
viberails/resources/: consts.json
viberails/resources/oauth/: callback.html  error.html  mfa.html  success.html
viberails/src/: common.rs  default.rs  main.rs
viberails/src/cloud/: lc_api.rs  query.rs
viberails/src/config/: loader.rs  loader_tests.rs  mod.rs
viberails/src/hooks/: hook.rs  install.rs  list.rs
viberails/src/oauth/: auth.rs  authorize.rs  login.rs  mod.rs
viberails/src/providers/: claude.rs  claude_tests.rs  clawdbot.rs  clawdbot_tests.rs  codex.rs  codex_tests.rs  cursor.rs  cursor_tests.rs  discovery.rs  discovery_tests.rs  gemini.rs  gemini_tests.rs  mod.rs  opencode.rs  opencode_tests.rs  registry.rs  registry_tests.rs  selector.rs  selector_tests.rs
viberails/src/providers/tests/: claude_tests.rs  clawdbot_tests.rs  codex_tests.rs  cursor_tests.rs  discovery_tests.rs  gemini_tests.rs  mod.rs  opencode_tests.rs  registry_tests.rs
(+39 files in other folders)
